warden: Use em-posix-spawn
Change-Id: I07bb2bed927049ca9cfecaaf007ef43d84314c61

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -11,6 +11,7 @@ namespace :warden do
   desc "Run Warden server"
   task :start do
     require "warden/server"
+    Warden::Server.setup
     Warden::Server.run!
   end
 end
