Add uid pool to LXC container
This is in preparation for adding quota support to the LXC container.
If a uid pool is supplied the LXC container will now attempt to acquire a
uid for each container that is created. A WardenError will be raised in the
event that a uid cannot be acquired. Note that the uid is the same both inside
and outside the container in order to facilitate enforcement of disk quotas.

Test plan:
- All existing tests pass.
- New tests pass.

Change-Id: Ic509c0cd9e40275f92207d35bb9bfb943d700026

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -11,7 +11,7 @@ namespace :warden do
   desc "Run Warden server"
   task :start do
     require "warden/server"
-    Warden::Server.setup
+    Warden::Server.setup(:logging => {:level => :debug2})
     Warden::Server.run!
   end
 end
