warden: Rework container management scripts
Change-Id: I3588b0a3cee13817903d8c2e103734b8ff55cf6d

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -12,8 +12,8 @@ task :setup do
   Dir.chdir("src") do
     sh "make clean all"
   end
-  Dir.chdir("root/lxc") do
-    sh "rm -rf 0??-*/{rootfs,union}"
+  Dir.chdir("root/linux/base") do
+    sh "rm -rf rootfs union"
     sh "ruby setup.rb"
   end
 end
