warden: Extract warden client to a separate gem
Change-Id: Ie56b2e7143fc8e52a6357bc7eb649ed269c22e6a

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -1,10 +1,14 @@
 source "http://rubygems.org"
 
-gemspec
-
-gem 'rake'
+gem "rake"
 gem "vcap_logging"
+gem "eventmachine", "0.12.11.cloudfoundry.3"
+gem "yajl-ruby"
+gem "em-posix-spawn", '> 0.0.1'
+gem "vcap_common"
+gem "sleepy_penguin"
 
 group :spec do
   gem "rspec"
+  gem "warden-client"
 end
