--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -1,12 +1,15 @@
 source "http://rubygems.org"
 
 gem "rake"
+gem "vcap_common"
 gem "vcap_logging"
 gem "eventmachine", "0.12.11.cloudfoundry.3"
 gem "yajl-ruby"
 gem "em-posix-spawn", '> 0.0.1'
-gem "vcap_common"
-gem "sleepy_penguin"
+
+group :linux do
+  gem "sleepy_penguin"
+end
 
 group :spec do
   gem "rspec"
