warden: Use tiny C tool to detect OOM
This removes the dependency on sleepy_penguin, and all calls to #watch
and #unbind outside of em-posix-spawn. Less #watch and #unbind equals
more stable EM.

Change-Id: I89af9cb3567c8e8c5db50779df5fdd1305c84099

--- a/warden/src/Makefile
+++ b/warden/src/Makefile
@@ -18,5 +18,8 @@ runner: runner.o
 clone: clone.o
 		$(CC) -o $@ -lutil $^
 
+oom: oom.o
+		$(CC) -o $@ $^
+
 %.o: %.c
 		$(CC) -c -Wall -D_GNU_SOURCE $(OPTIMIZATION) $(DEBUG) $(CFLAGS) $<
