warden: Change link order to work for gcc 4.6
Change-Id: I112fdf488311187d616a2859ec5048c640db0770

--- a/warden/src/clone/Makefile
+++ b/warden/src/clone/Makefile
@@ -9,7 +9,7 @@ clean:
 .PHONY: all clean
 
 clone: clone.o barrier.o util.o console.o mount.o
-		$(CC) -o $@ -lutil $^
+		$(CC) -o $@ $^ -lutil
 
 %.o: %.c
 		$(CC) -c -Wall -D_GNU_SOURCE $(OPTIMIZATION) $(DEBUG) $(CFLAGS) $<
