--- a/warden/src/oom/Makefile
+++ b/warden/src/oom/Makefile
@@ -9,7 +9,7 @@ clean:
 .PHONY: all clean
 
 oom: oom.o
-		$(CC) -o $@ -lutil $^
+		$(CC) -o $@ $^ -lutil
 
 %.o: %.c
 		$(CC) -c -Wall -D_GNU_SOURCE $(OPTIMIZATION) $(DEBUG) $(CFLAGS) $<
