--- a/warden/root/linux/skeleton/override/etc/init/networking.conf
+++ b/warden/root/linux/skeleton/override/etc/init/networking.conf
@@ -5,8 +5,7 @@
 
 description	"configure virtual network devices"
 
-start on (local-filesystems
-	  and stopped udevtrigger)
+start on local-filesystems
 
 task
 
