--- a/warden/root/linux/skeleton/override/etc/init/ssh.conf
+++ b/warden/root/linux/skeleton/override/etc/init/ssh.conf
@@ -4,7 +4,7 @@
 
 description	"OpenSSH server"
 
-start on filesystem
+start on filesystem and net-device-up IFACE=veth-*
 stop on runlevel S
 
 expect fork
