Add support for storing containers at an arbitrary location
This adds two config parameters, "container_depot" and "container_rootfs,"
that specify where individual containers and the base, read-only filesystem
should live, respectively.

Test plan:
- Ran the specs
- Ran `bundle exec rake setup[/tmp/warden/rootfs]` and then started
  the warden using the modified linux config. Manually created, modified,
  and destroyed containers using the repl.

Change-Id: I96ef62fea5a5c3634cbd589cc6c44c43a5837621

--- a/warden/config/linux.yml
+++ b/warden/config/linux.yml
@@ -25,6 +25,14 @@ server:
 
   unix_domain_permissions: 0777
 
+  # Specifies the path to the base chroot used as the read-only root
+  # filesystem
+  container_rootfs: /tmp/warden/rootfs
+
+  # Specifies the path to the parent directory under which all containers
+  # will live.
+  container_depot: /tmp/warden/containers
+
 logging:
   level: debug2
 
