--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -9,15 +9,17 @@ RSpec::Core::RakeTask.new(:spec) do |t|
 end
 
 desc "Run (or re-run) steps to setup warden"
-task :setup, :base_dir do |t, args|
-  default_base_dir = File.join(File.dirname(__FILE__), "root/linux/base")
-  args.with_defaults(:base_dir => default_base_dir)
+task :setup, :rootfs_dir do |t, args|
+  default_rootfs_dir = File.join(File.dirname(__FILE__), "root/linux/base/rootfs")
+  args.with_defaults(:rootfs_dir => default_rootfs_dir)
 
   Dir.chdir("src") do
     sh "make clean all"
   end
 
-  sh "sudo -E root/linux/base/setup.sh #{args[:base_dir]}"
+  sh "cp src/clone/clone root/linux/skeleton/bin"
+
+  sh "sudo -E root/linux/base/setup.sh #{args[:rootfs_dir]}"
 end
 
 namespace :warden do
