Refer to warden-client with git
  Test plan:
    Create a submodule pointer src/warden in cf-release and update the
warden package and job, build a release

Change-Id: I3ac94f3d7a848e142f0e59b38167b3f91f27d780

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -9,5 +9,5 @@ gem "em-posix-spawn", '> 0.0.1'
 
 group :spec do
   gem "rspec"
-  gem "warden-client"
+  gem "warden-client", :git => 'git://github.com/d/vcap-warden-and-friends.git'
 end
