Consistently name paths in config and source code
Change-Id: Ie5e3c58a79d520e71e941f2fd849895d0994eecc

--- a/warden/config/linux.yml
+++ b/warden/config/linux.yml
@@ -27,11 +27,11 @@ server:
 
   # Specifies the path to the base chroot used as the read-only root
   # filesystem
-  container_rootfs: /tmp/warden/rootfs
+  container_rootfs_path: /tmp/warden/rootfs
 
   # Specifies the path to the parent directory under which all containers
   # will live.
-  container_depot: /tmp/warden/containers
+  container_depot_path: /tmp/warden/containers
 
 logging:
   level: debug2
