--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -1,13 +1,13 @@
 source "http://rubygems.org"
 
 gem "rake"
-gem "vcap_common", :git => 'git://github.com/cloudfoundry/vcap-common.git', :ref => '72b230b6'
-gem "vcap_logging", :git => 'git://github.com/cloudfoundry/common.git', :ref => '309a39e1'
-gem "eventmachine", "0.12.11.cloudfoundry.3", :git => 'git://github.com/cloudfoundry/eventmachine.git', :branch => 'release-0.12.11-cf'
+gem "vcap_common", :git => 'https://github.com/cloudfoundry/vcap-common.git', :ref => '72b230b6'
+gem "vcap_logging", :git => 'https://github.com/cloudfoundry/common.git', :ref => '309a39e1'
+gem "eventmachine", "0.12.11.cloudfoundry.3", :git => 'https://github.com/cloudfoundry/eventmachine.git', :branch => 'release-0.12.11-cf'
 gem "yajl-ruby"
-gem "em-posix-spawn", :git => 'git://github.com/cloudfoundry/common.git', :ref => '309a39e1'
+gem "em-posix-spawn", :git => 'https://github.com/cloudfoundry/common.git', :ref => '309a39e1'
 
 group :spec do
   gem "rspec"
-  gem "warden-client", :git => 'git://github.com/cloudfoundry/warden.git'
+  gem "warden-client", :git => 'https://github.com/cloudfoundry/warden.git', :ref => '3e94ec2e'
 end
