Convert base container class to use warden-protocol
Change-Id: I289a8690d753381efbef34657e55c8b80b90c33f

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -4,8 +4,8 @@ gem "rake"
 gem "vcap_common", :git => 'https://github.com/cloudfoundry/vcap-common.git', :ref => '72b230b6'
 gem "vcap_logging", :git => 'https://github.com/cloudfoundry/common.git', :ref => '309a39e1'
 gem "eventmachine", "0.12.11.cloudfoundry.3", :git => 'https://github.com/cloudfoundry/eventmachine.git', :branch => 'release-0.12.11-cf'
-gem "yajl-ruby"
 gem "em-posix-spawn", :git => 'https://github.com/cloudfoundry/common.git', :ref => '309a39e1'
+gem "warden-protocol", :path => "../warden-protocol"
 
 group :spec do
   gem "rspec"
