Rakefile now picks up rootfs dir from config file.
Change-Id: Ic2511edea0a287b462b67e0c69e85b2f80f0ca85

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -9,17 +9,36 @@ RSpec::Core::RakeTask.new(:spec) do |t|
 end
 
 desc "Run (or re-run) steps to setup warden"
-task :setup, :rootfs_dir do |t, args|
-  default_rootfs_dir = File.join(File.dirname(__FILE__), "root/linux/base/rootfs")
-  args.with_defaults(:rootfs_dir => default_rootfs_dir)
+task :setup, :config_path do |t, args|
 
+  rootfs_dir = nil
+  error_msg = nil
+
+  if args[:config_path]
+    config = YAML.load_file(args["config_path"])
+    if config["server"] && config["server"]["container_rootfs_path"]
+      rootfs_dir = config["server"]["container_rootfs_path"]
+    else
+      error_msg = "ERROR! Config file: #{args["config_path"]} doesn't contain "
+      error_msg << "the key: server -> container_rootfs_path."
+    end
+  else
+    error_msg = "ERROR! No config file provided."
+  end
+
+  if error_msg
+    STDERR.puts(error_msg)
+    Process.exit(1)
+  end
+
+  Process.exit
   Dir.chdir("src") do
     sh "make clean all"
   end
 
   sh "cp src/clone/clone root/linux/skeleton/bin"
 
-  sh "sudo -E root/linux/base/setup.sh #{args[:rootfs_dir]}"
+  sh "sudo -E root/linux/base/setup.sh #{rootfs_dir}"
 end
 
 namespace :warden do
