Rakefile now picks up rootfs dir from config file.
Change-Id: Ic2511edea0a287b462b67e0c69e85b2f80f0ca85

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -9,9 +9,30 @@ RSpec::Core::RakeTask.new(:spec) do |t|
 end
 
 desc "Run (or re-run) steps to setup warden"
-task :setup, :rootfs_dir do |t, args|
-  default_rootfs_dir = File.join(File.dirname(__FILE__), "root/linux/base/rootfs")
-  args.with_defaults(:rootfs_dir => default_rootfs_dir)
+task :setup, :config_path do |t, args|
+
+  require "warden/logger"
+  logger = Warden::Logger.logger
+
+  rootfs_dir = nil
+
+  if args[:config_path]
+    config = YAML.load_file(args["config_path"])
+    if config["server"] && config["server"]["container_rootfs_path"]
+      rootfs_dir = config["server"]["container_rootfs_path"]
+    else
+      msg = "Config file: #{args["config_path"]} doesn't contain "
+      msg << "the key: server -> container_rootfs_path."
+      logger.error(msg)
+      Process.exit
+    end
+  else
+    msg = "No config file provided."
+    logger.error(msg)
+    Process.exit
+  end
+
+  args.with_defaults(:rootfs_dir => rootfs_dir)
 
   Dir.chdir("src") do
     sh "make clean all"
