Convert warden to use warden-protocol
Change-Id: I002997ec605596fe7163467e7ca808a3821f707e

--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -9,5 +9,5 @@ gem "warden-protocol", :path => "../warden-protocol"
 
 group :spec do
   gem "rspec"
-  gem "warden-client", :git => 'https://github.com/cloudfoundry/warden.git', :ref => '3e94ec2e'
+  gem "warden-client", :path => "../warden-client" #:git => 'https://github.com/cloudfoundry/warden.git', :ref => '3e94ec2e'
 end
