Convert em-warden-client to use warden-protocol
Change-Id: Ibcebb29751536fd1eb0b1f49913628de6290a4bf

--- a/em-warden-client/Gemfile
+++ b/em-warden-client/Gemfile
@@ -2,3 +2,6 @@ source 'https://rubygems.org'
 
 # Specify your gem's dependencies in em-warden-client.gemspec
 gemspec
+
+gem "warden-client", :path => "../warden-client"
+gem "warden-protocol", :path => "../warden-protocol"
