--- a/warden/src/iomux/Makefile
+++ b/warden/src/iomux/Makefile
@@ -1,10 +1,10 @@
 OPTIMIZATION?=-O0
 DEBUG?=-g -ggdb -rdynamic
 
-all: iomux-spawn
+all: iomux-spawn iomux-link
 
 clean:
-		rm -f *.o iomux-spawn test
+		rm -f *.o iomux-spawn test iomux-link
 
 .PHONY: all clean
 
@@ -12,6 +12,9 @@ test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrie
 		$(CC) -lpthread -o $@ $^
 
 iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o
+		$(CC) -lpthread -o $@ $^
+
+iomux-link: iomux-link.o pump.o util.o
 		$(CC) -lpthread -o $@ $^
 
 %.o: %.c
