Wait for at least one client to link to ``iomux-spawn''
``iomux-spawn'' now waits for at least one instance of ``iomux-link''
before allowing the spawned command to proceed. Note that this implementation
relies on the behavior of ``iomux-link'' for correctness. That is, ``iomux-link''
first connects to stdout/stderr before connecting to the status socket.

Change-Id: I2529c6d87a10d9d51b28ca443cd41848a2032f75

--- a/warden/src/iomux/Makefile
+++ b/warden/src/iomux/Makefile
@@ -11,7 +11,7 @@ clean:
 test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o test_status_writer.o
 		$(CC) -lpthread -o $@ $^
 
-iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o
+iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o barrier.o
 		$(CC) -lpthread -o $@ $^
 
 iomux-link: iomux-link.o pump.o util.o
