--- a/warden/src/iomux/Makefile
+++ b/warden/src/iomux/Makefile
@@ -9,13 +9,13 @@ clean:
 .PHONY: all clean
 
 test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o test_status_writer.o
-		$(CC) -lpthread -o $@ $^
+		$(CC) -o $@ $^ -lpthread
 
 iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o barrier.o
-		$(CC) -lpthread -o $@ $^
+		$(CC) -o $@ $^ -lpthread
 
 iomux-link: iomux-link.o pump.o util.o
-		$(CC) -lpthread -o $@ $^
+		$(CC) -o $@ $^ -lpthread
 
 %.o: %.c
 		$(CC) -c -Wall -D_GNU_SOURCE $(OPTIMIZATION) $(DEBUG) $(CFLAGS) $<
