--- a/warden/src/iomux/Makefile
+++ b/warden/src/iomux/Makefile
@@ -8,10 +8,10 @@ clean:
 
 .PHONY: all clean
 
-test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o test_status_writer.o
+test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o test_status_writer.o dlog.o
 		$(CC) -o $@ $^ -lpthread
 
-iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o barrier.o
+iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o barrier.o dlog.o
 		$(CC) -o $@ $^ -lpthread
 
 iomux-link: iomux-link.o pump.o util.o
