Default encoding to UTF-8
Change-Id: Ib100636d2fd2bc4d8c4f7d0e576a38fc0cdf632a

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -1,3 +1,5 @@
+# coding: UTF-8
+
 require "rspec/core/rake_task"
 require "rspec/core/version"
 require "vcap/common"
@@ -59,5 +61,29 @@ namespace :warden do
 
     Warden::Server.setup(config)
     Warden::Server.run!
+  end
+end
+
+task :ensure_coding do
+  patterns = [
+    /Rakefile$/,
+    /\.rb$/,
+  ]
+
+  files = `git ls-files`.split.select do |file|
+    patterns.any? { |e| e.match(file) }
+  end
+
+  header = "# coding: UTF-8\n\n"
+
+  files.each do |file|
+    content = File.read(file)
+
+    unless content.start_with?(header)
+      File.open(file, "w") do |f|
+        f.write(header)
+        f.write(content)
+      end
+    end
   end
 end
