Propagate full exit status to linkers
Change-Id: Iea0b2913d2614a2c88d05932658f625431bc3236

--- a/warden/src/iomux/Makefile
+++ b/warden/src/iomux/Makefile
@@ -8,13 +8,13 @@ clean:
 
 .PHONY: all clean
 
-test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o test_status_writer.o dlog.o
+test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o status_reader.o test_status_writer.o dlog.o
 		$(CC) -o $@ $^ -lpthread
 
 iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o barrier.o dlog.o
 		$(CC) -o $@ $^ -lpthread
 
-iomux-link: iomux-link.o pump.o util.o
+iomux-link: iomux-link.o pump.o status_reader.o util.o
 		$(CC) -o $@ $^ -lpthread
 
 %.o: %.c
