--- a/warden/.gitignore
+++ b/warden/.gitignore
@@ -3,3 +3,7 @@
 pkg/*
 /tmp
 root/linux/skeleton/bin/clone
+root/linux/skeleton/bin/iomux-link
+root/linux/skeleton/bin/iomux-spawn
+root/insecure/skeleton/bin/iomux-link
+root/insecure/skeleton/bin/iomux-spawn
