--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -37,6 +37,11 @@ task :setup, :config_path do |t, args|
 
   sh "cp src/clone/clone root/linux/skeleton/bin"
 
+  ["linux", "insecure"].each do |ct|
+    sh "cp src/iomux/iomux-spawn root/#{ct}/skeleton/bin"
+    sh "cp src/iomux/iomux-link root/#{ct}/skeleton/bin"
+  end
+
   sh "sudo -E root/linux/base/setup.sh #{rootfs_dir}"
 end
 
