--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -12,24 +12,18 @@ end
 
 desc "Run (or re-run) steps to setup warden"
 task :setup, :config_path do |t, args|
+  rootfs_path = ENV["CONTAINER_ROOTFS_PATH"]
 
-  rootfs_dir = nil
-  error_msg = nil
-
-  if args[:config_path]
+  if args["config_path"]
     config = YAML.load_file(args["config_path"])
+
     if config["server"] && config["server"]["container_rootfs_path"]
-      rootfs_dir = config["server"]["container_rootfs_path"]
-    else
-      error_msg = "ERROR! Config file: #{args["config_path"]} doesn't contain "
-      error_msg << "the key: server -> container_rootfs_path."
+      rootfs_path = config["server"]["container_rootfs_path"]
     end
-  else
-    error_msg = "ERROR! No config file provided."
   end
 
-  if error_msg
-    STDERR.puts(error_msg)
+  unless rootfs_path
+    STDERR.puts "Please specify path to config file, or CONTAINER_ROOTFS_PATH"
     Process.exit(1)
   end
 
@@ -39,7 +33,7 @@ task :setup, :config_path do |t, args|
 
   sh "cp src/clone/clone root/linux/skeleton/bin"
 
-  sh "sudo -E root/linux/base/setup.sh #{rootfs_dir}"
+  sh "sudo -E root/linux/base/setup.sh #{rootfs_path}"
 end
 
 namespace :warden do
