Parent directory for CONTAINER_ROOTFS_PATH should exist
Change-Id: I077f25af8159af1b4f1f7c6981dd0a2a34ca79fe

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -33,6 +33,7 @@ task :setup, :config_path do |t, args|
 
   sh "cp src/clone/clone root/linux/skeleton/bin"
 
+  sh "mkdir -p #{File.dirname(rootfs_path)}"
   sh "sudo -E root/linux/base/setup.sh #{rootfs_path}"
 end
 
