Move tests into ``test'' subdir
Change-Id: Ic2a3dc2ad9320f6a789591716a4ed304ce9b5195

--- a/warden/src/iomux/Makefile
+++ b/warden/src/iomux/Makefile
@@ -4,12 +4,13 @@ DEBUG?=-g -ggdb -rdynamic
 all: iomux-spawn iomux-link
 
 clean:
-		rm -f *.o iomux-spawn test iomux-link
+		rm -f *.o iomux-spawn iomux-link
+		cd test && $(MAKE) $@
 
 .PHONY: all clean
 
-test: test.o ring_buffer.o util.o test_ring_buffer.o test_muxer.o muxer.o barrier.o status_writer.o status_reader.o test_status_writer.o dlog.o
-		$(CC) -o $@ $^ -lpthread
+test:
+		cd test && $(MAKE) $@
 
 iomux-spawn: iomux-spawn.o ring_buffer.o muxer.o status_writer.o child.o util.o barrier.o dlog.o
 		$(CC) -o $@ $^ -lpthread
