--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -2,7 +2,7 @@ source "http://rubygems.org"
 
 gem "rake"
 gem "vcap_common", :git => 'https://github.com/cloudfoundry/vcap-common.git', :ref => '72b230b6'
-gem "vcap_logging", :git => 'https://github.com/cloudfoundry/common.git', :ref => 'e2b58321'
+gem "steno", :git => 'https://github.com/cloudfoundry/steno.git', :ref => '029b1238'
 gem "eventmachine", "0.12.11.cloudfoundry.3", :git => 'https://github.com/cloudfoundry/eventmachine.git', :branch => 'release-0.12.11-cf'
 gem "em-posix-spawn", :git => 'https://github.com/cloudfoundry/common.git', :ref => 'e2b58321'
 gem "warden-protocol", :git => 'https://github.com/cloudfoundry/warden.git', :ref => 'e64cc786'
