Unshare mount namespace before running setup.sh
This prevents the setup routine from leaking mounts if it interrupted.

Change-Id: I774f75db6ade6149060149da7a6570880f1ec444

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -38,7 +38,7 @@ task :setup, :config_path do |t, args|
   end
 
   sh "mkdir -p #{File.dirname(rootfs_path)}"
-  sh "sudo -E root/linux/base/setup.sh #{rootfs_path}"
+  sh "sudo -E unshare -m root/linux/base/setup.sh #{rootfs_path}"
 end
 
 namespace :warden do
