--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -7,8 +7,10 @@ gem "eventmachine", "0.12.11.cloudfoundry.3", :git => 'https://github.com/cloudf
 gem "em-posix-spawn", :git => 'https://github.com/cloudfoundry/common.git', :ref => 'e2b58321'
 gem "sys-filesystem"
 
-gem "warden-protocol", :git => 'https://github.com/cloudfoundry/warden.git', :ref => 'adf39019'
-gem "warden-client", :git => 'https://github.com/cloudfoundry/warden.git', :ref => '1918b625'
+git "https://github.com/cloudfoundry/warden.git", :ref => "1d8e2fb1" do
+  gem "warden-protocol"
+  gem "warden-client"
+end
 
 group :spec do
   gem "rspec"
