--- a/warden/Gemfile
+++ b/warden/Gemfile
@@ -7,10 +7,8 @@ gem "eventmachine", "0.12.11.cloudfoundry.3", :git => 'https://github.com/cloudf
 gem "em-posix-spawn", :git => 'https://github.com/cloudfoundry/common.git', :ref => 'bcfeca6c'
 gem "sys-filesystem"
 
-git "https://github.com/cloudfoundry/warden.git", :ref => "1d8e2fb1" do
-  gem "warden-protocol"
-  gem "warden-client"
-end
+gem "warden-protocol", :git => "https://github.com/cloudfoundry/warden.git", :ref => "1d8e2fb1"
+gem "warden-client", :git => "https://github.com/cloudfoundry/warden.git", :ref => "1d8e2fb1"
 
 group :spec do
   gem "rspec"
