Use rspec options from .rspec file
Change-Id: I7daeaeab05571ca8a94fbea9bd314ed8b58c5c88

--- a/warden-protocol/Rakefile
+++ b/warden-protocol/Rakefile
@@ -7,7 +7,7 @@ task :default => :spec
 
 desc "Run all examples"
 RSpec::Core::RakeTask.new(:spec) do |t|
-  t.rspec_opts = %w[--color --format documentation]
+  # See .rspec
 end
 
 task :ensure_coding do
