First stab at warden shell
Change-Id: I3b713775a00a3a25723983ccc5f70db2c4bca5a4

--- a/warden/src/Makefile
+++ b/warden/src/Makefile
@@ -2,7 +2,7 @@ default: all
 
 # Proxy any target to the Makefiles in the per-tool directories
 %:
-	cd clone && $(MAKE) $@
+	cd wsh && $(MAKE) $@
 	cd oom && $(MAKE) $@
 	cd repquota && $(MAKE) $@
 	cd iomux && $(MAKE) $@
