Rename wshc -> wsh
Change-Id: I1b14fdd032fa2fc5de9d509c01bf93ec3290e8bc

--- a/warden/src/wsh/Makefile.dep
+++ b/warden/src/wsh/Makefile.dep
@@ -4,5 +4,5 @@ msg.o: msg.c msg.h
 pump.o: pump.c pump.h util.h
 un.o: un.c un.h util.h
 util.o: util.c util.h
-wshc.o: wshc.c msg.h pump.h un.h
+wsh.o: wsh.c msg.h pump.h un.h
 wshd.o: wshd.c barrier.h msg.h mount.h un.h util.h
