Copy wshd and wsh from setup task
Change-Id: I3f017dd77af79764c081d365856ef48832eda367

--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -25,6 +25,8 @@ namespace :setup do
 
     sh "cp src/clone/clone root/linux/skeleton/bin"
     ["linux", "insecure"].each do |ct|
+      sh "cp src/wsh/wshd root/#{ct}/skeleton/bin"
+      sh "cp src/wsh/wsh root/#{ct}/skeleton/bin"
       sh "cp src/iomux/iomux-spawn root/#{ct}/skeleton/bin"
       sh "cp src/iomux/iomux-link root/#{ct}/skeleton/bin"
     end
