--- a/warden/Rakefile
+++ b/warden/Rakefile
@@ -23,10 +23,10 @@ namespace :setup do
       sh "make clean all"
     end
 
-    sh "cp src/clone/clone root/linux/skeleton/bin"
+    sh "cp src/wsh/wshd root/linux/skeleton/bin"
+    sh "cp src/wsh/wsh root/linux/skeleton/bin"
+
     ["linux", "insecure"].each do |ct|
-      sh "cp src/wsh/wshd root/#{ct}/skeleton/bin"
-      sh "cp src/wsh/wsh root/#{ct}/skeleton/bin"
       sh "cp src/iomux/iomux-spawn root/#{ct}/skeleton/bin"
       sh "cp src/iomux/iomux-link root/#{ct}/skeleton/bin"
     end
