Use external utility to close non-default fds
The method used by em-posix-spawn suffers from race conditions that
prevent posix_spawn from executing succesfully. If it is instructured to
close file descriptors that are already closed it doesn't spawn the
child and exits the newly created process with status 127.

Change-Id: I494e15888f54e141f7de49bad1348fb0bd67dbae

--- a/warden/src/Makefile
+++ b/warden/src/Makefile
@@ -6,5 +6,6 @@ default: all
 	cd oom && $(MAKE) $@
 	cd repquota && $(MAKE) $@
 	cd iomux && $(MAKE) $@
+	cd closefds && $(MAKE) $@
 
 .PHONY: default
