Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,5 +2,8 @@
 	label-Code-Review = -2..+2 group Core Team
 	label-Verified = -1..+1 group Core Team
 [project]
+	state = active
 [receive]
 	requireChangeId = true
+[submit]
+	mergeContent = true
