--- a/warden/config/linux.yml
+++ b/warden/config/linux.yml
@@ -31,8 +31,8 @@ server:
     nofile: 8192
     nproc: 512
 
-  # Specifies the output limit of a job (stdout/stderr combined).
-  job_output_limit: 10485760
+  # Specifies the output limit (in bytes) of a job (stdout/stderr combined).
+  job_output_limit: 1024
 
   quota:
     disk_quota_enabled: true
