--- a/warden/config/linux.yml
+++ b/warden/config/linux.yml
@@ -50,6 +50,10 @@ network:
   # Pool this many /30 networks.
   pool_size: 256
 
+  # Interface MTU size (default: 1454 for OpenStack)
+  # With MTU 1500 you will get problems with rubygems with GRE tunneling
+  mtu: 1454
+
 user:
   pool_start_uid: 10000
   pool_size: 256
