changing default value to 1500 and some small tweaks

--- a/warden/config/linux.yml
+++ b/warden/config/linux.yml
@@ -50,9 +50,10 @@ network:
   # Pool this many /30 networks.
   pool_size: 256
 
-  # Interface MTU size (default: 1454 for OpenStack)
-  # With MTU 1500 you will get problems with rubygems with GRE tunneling
-  mtu: 1454
+  # Interface MTU size (default: 1500)
+  # With MTU 1500 you will get problems with rubygems and GRE tunneling by OpenStack
+  # You will need for Gre tunneling 1454
+  mtu: 1500
 
 user:
   pool_start_uid: 10000
