Updated travis to only run the non *nix stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: ruby
 
 rvm:
+  - 1.8.7
   - 1.9.3
+  - 2.0.0
 
-script: ./.travis.run
+gemfile:
+  - warden-client/Gemfile
+  - warden-protocol/Gemfile
+
+script:
+  - cd warden-client && bundle exec rspec
+  - cd warden-protocol && bundle exec rspec
