Fix the travis build to actually run some tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ env:
   - "BUNDLE_GEMFILE=$TRAVIS_BUILD_DIR/warden-protocol/Gemfile"
 
 script:
-  - if [ "$BUNDLE_GEMFILE" == *warden-client* ]; then cd warden-client && bundle exec rspec spec; fi
-  - if [ "$BUNDLE_GEMFILE" == *warden-protocol* ]; then cd warden-protocol bundle exec rspec spec; fi
+  - if [[ "$BUNDLE_GEMFILE" == *warden-client* ]]; then cd $TRAVIS_BUILD_DIR/warden-client && bundle exec rspec spec; fi
+  - if [[ "$BUNDLE_GEMFILE" == *warden-protocol* ]]; then cd $TRAVIS_BUILD_DIR/warden-protocol && bundle exec rspec spec; fi
